--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>firebase form auth</title>
+  <title>TrinidadCode Login</title>
   <link rel="stylesheet" href="style.css">
     <script type="module" src="trinidad.js"></script>
   </head>
